# public-airflow-examples

./: .gitignore  Dockerfile  README.md  airflow-values.yaml  kafka-cluster.yaml  openfga-values.yaml  pyproject.toml  setup_airflow.fish  temp.json
dags/c_k8s_pod_example/: c_code_dag.py  hello_app  hello_world.c
dags/kafka/: kafka_consumer_dag.py  kafka_consumer_open_fga_dag.py
dags/ofga/: open_fga_check_tuple.py  open_fga_create_store.py
